# FinWise-OpenEnv

./: .env.example  .gitignore  Dockerfile  README.md  SUBMISSION_CHECKLIST.md  app.py  audit_results.txt  env.py  fix_verify.py  graders.py  inference.py  models.py  openenv.yaml  phase2_failfast_audit.py  pre_submission_validator.py  pyproject.toml  requirements.txt  test_scores.py  test_space.py
finwise_env/: __init__.py  env.py  graders.py  models.py  tasks.py
server/: __init__.py  app.py  cli.py
