[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finwise-openenv"
version = "0.1.0"
description = "FinWise OpenEnv: Indian retail portfolio rebalancing environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.29.0",
  "pydantic==2.7.1",
  "openai>=2.7.2",
  "httpx==0.27.0",
  "python-dotenv==1.0.1",
  "pyyaml==6.0.1",
  "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.cli:main"

[tool.openenv]
entrypoint = "finwise_env.env:FinWiseEnv"

[tool.setuptools]
py-modules = ["app", "env", "models", "tasks", "graders", "inference"]

[tool.setuptools.packages.find]
where = ["."]
include = ["finwise_env*"]
